fix: scrolling on small screen

--- a/cart_2/htmldemodraganddrop.css
+++ b/cart_2/htmldemodraganddrop.css
@@ -31,9 +31,6 @@ p {
 #products {
 	list-style: none;
 	padding: 0;
-	overflow: auto;
-	height: 100vh;
-	margin: 0;
 }
 .item {
 	display: inline-block;
@@ -184,6 +181,11 @@ body #cart_sample {
 	.item {
 		width: 180px;
 		height: 180px;
+	}
+	#products {
+		overflow: auto;
+		height: 100vh;
+		margin: 0;
 	}
 }
 
